tests/NormalTests/paczka1/fuzzy1/78864705.err
Error in line 8: dVN6Im A985 299,44
Error in line 6: dVN6Im A985 99,8
Error in line 2: JpNS A508 97,1
Error in line 14: dVN6Im A421 28,7
Error in line 24: 5wZJ4ve A985 90,0
Error in line 30: 5wZJ4ve A421 36,5
Error in line 36: TSof A985 9,6
Error in line 39: UIH A985 26,86
Error in line 32: 5wZJ4ve S608 16,7
